K8S/Overlays/Prod/gateway-cors-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  template:
    spec:
      containers:
      - name: gateway-api
