K8S/Overlays/Prod/ingress-prod-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-entry
spec:
  rules:
  # - host: "foodsense.local | foodsense.com"
  - http:
      paths:
      - path: /api/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway-svc
            port:
              number: 80
      - path: /.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
